src/docs/assets/syntax.bnf
prog      ::= { stmt } ;

stmt      ::= cmpndstmt
           | "let" type ident "=" expr ";"
           | "ch" ident "=" expr ";"
           | "prn" expr ";"
           | "fn" type ident "(" [ param { "," param } ] ")" cmpndstmt ";"
           | "if" expr cmpndstmt { "elif" expr cmpndstmt } { "else" cmpndstmt } ";"
           | "while" expr cmpndstmt ";"
           | "ret" expr ";"
           | "break" ";"
           | "conti" ";" ;

cmpndstmt ::= "{" { stmt } "}" ";" ;

type      ::= "int" | "float" | "bool" | "str" ;

ident     ::= ( "_" | letter ) { letter | digit | "_" } ;

letter    ::= "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m" | "n"
           | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z" | "A" | "B"
           | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K" | "L" | "M" | "N" | "O" | "P"
           | "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z" ;

digit     ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;

param     ::= type ident ;

expr      ::= logiexpr { ( "==" | "!=" | "<" | ">" | "<=" | ">=" ) logiexpr } ;

logiexpr  ::= arithexpr { ( "!" | "&" | "|" ) arithexpr }

arithexpr ::= term { ( "+" | "-" ) term } ;

term      ::= expo { ( "*" | "/" | "$" | "%" ) expo } ;

expo      ::= unary { "^" unary } ;

unary     ::= [ ( "+" | "-" ) ] prim ;

prim      ::= num | bool | str | ident | "(" expr ")" ;
